--- a/main.ipynb
+++ b/main.ipynb
@@ -2,27 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---- Buying Stocks ----\n"
+      "---- Buying Stocks ----\n",
+      "---- Stock Ledger ----\n",
+      "AAPL: 45.0 (20 shares)\n",
+      "---- Selling Stocks ----\n",
+      "Sold 20 shares of AAPL at $65.0 each.\n",
+      "Total cost basis: $900.0, Profit/Loss: $400.0\n"
      ]
     },
     {
-     "ename": "UnboundLocalError",
-     "evalue": "cannot access local variable 'current_node' where it is not associated with a value",
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'get_data'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# 1. Buying Stocks\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m---- Buying Stocks ----\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 11\u001b[0m stock_ledger\u001b[38;5;241m.\u001b[39mbuy(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAAPL\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m20\u001b[39m, \u001b[38;5;241m45.0\u001b[39m)  \u001b[38;5;66;03m# Buy 20 shares of AAPL at $45\u001b[39;00m\n\u001b[1;32m     12\u001b[0m stock_ledger\u001b[38;5;241m.\u001b[39mbuy(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAAPL\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m20\u001b[39m, \u001b[38;5;241m75.0\u001b[39m)  \u001b[38;5;66;03m# Buy 20 shares of AAPL at $75\u001b[39;00m\n\u001b[1;32m     13\u001b[0m stock_ledger\u001b[38;5;241m.\u001b[39mbuy(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMSFT\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m20\u001b[39m, \u001b[38;5;241m95.0\u001b[39m)  \u001b[38;5;66;03m# Buy 20 shares of MSFT at $95\u001b[39;00m\n",
-      "File \u001b[0;32m~/CapitalGainsTracker/stock_ledger.py:29\u001b[0m, in \u001b[0;36mStockLedger.buy\u001b[0;34m(self, stock_symbol, shares_bought, price_per_share)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbuy\u001b[39m(\u001b[38;5;28mself\u001b[39m, stock_symbol, shares_bought, price_per_share):\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;66;03m# entry for stock symbol alr exisits?\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m     entry \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_entry(stock_symbol)\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m entry \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     32\u001b[0m         entry \u001b[38;5;241m=\u001b[39m LedgerEntry(stock_symbol)\n",
-      "File \u001b[0;32m~/CapitalGainsTracker/stock_ledger.py:19\u001b[0m, in \u001b[0;36mStockLedger.get_entry\u001b[0;34m(self, stock_symbol)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_entry\u001b[39m(\u001b[38;5;28mself\u001b[39m, stock_symbol):\n\u001b[0;32m---> 19\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m current_node \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     20\u001b[0m         entry \u001b[38;5;241m=\u001b[39m current_node\u001b[38;5;241m.\u001b[39mget_data()\n\u001b[1;32m     21\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m entry\u001b[38;5;241m.\u001b[39mequals(LedgerEntry(stock_symbol)):\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: cannot access local variable 'current_node' where it is not associated with a value"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 20\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# 2. Selling Stocks\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m---- Selling Stocks ----\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 20\u001b[0m stock_ledger\u001b[38;5;241m.\u001b[39msell(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAAPL\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m30\u001b[39m, \u001b[38;5;241m65.0\u001b[39m)  \u001b[38;5;66;03m# Sell 30 shares of AAPL at $65\u001b[39;00m\n\u001b[1;32m     21\u001b[0m stock_ledger\u001b[38;5;241m.\u001b[39mdisplay_ledger()\n\u001b[1;32m     23\u001b[0m stock_ledger\u001b[38;5;241m.\u001b[39msell(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAAPL\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m65.0\u001b[39m)  \u001b[38;5;66;03m# Sell 10 shares of AAPL at $65\u001b[39;00m\n",
+      "File \u001b[0;32m~/CapitalGainsTracker/stock_ledger.py:69\u001b[0m, in \u001b[0;36mStockLedger.sell\u001b[0;34m(self, stock_symbol, shares_sold, price_per_share)\u001b[0m\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m shares_sold \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m entry\u001b[38;5;241m.\u001b[39mpurchases\u001b[38;5;241m.\u001b[39mis_empty():\n\u001b[0;32m---> 69\u001b[0m     purchase \u001b[38;5;241m=\u001b[39m entry\u001b[38;5;241m.\u001b[39mremove_purchase() \u001b[38;5;66;03m#FIFO\u001b[39;00m\n\u001b[1;32m     71\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m purchase\u001b[38;5;241m.\u001b[39mshares \u001b[38;5;241m>\u001b[39m shares_sold:\n\u001b[1;32m     73\u001b[0m         total_cost \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m shares_sold \u001b[38;5;241m*\u001b[39m purchase\u001b[38;5;241m.\u001b[39mcost_per_share\n",
+      "File \u001b[0;32m~/CapitalGainsTracker/ledger_entry.py:12\u001b[0m, in \u001b[0;36mLedgerEntry.remove_purchase\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mremove_purchase\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m---> 12\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpurchases\u001b[38;5;241m.\u001b[39mremove_front() \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpurchases\u001b[38;5;241m.\u001b[39mis_empty() \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/CapitalGainsTracker/linked_deque.py:70\u001b[0m, in \u001b[0;36mLinkedDeque.remove_front\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mis_empty():\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDeque is empty.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 70\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfront\u001b[38;5;241m.\u001b[39mget_data()\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfront \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfront\u001b[38;5;241m.\u001b[39mget_next_node()\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfront \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'get_data'"
      ]
     }
    ],
